# econova_wallet

./: .env.example  .gitignore  Makefile  README.md  error.txt  filled.json  fixed.json  flutter_launcher_icons.yaml  flutter_verson.md  item.json  not_transalated.json  pubspec.yaml  readme.real.md  s.js  todo  todo.json
agent_dart-0.1.24+1/: pubspec.yaml
algorand_dart-1.0.3/: pubspec.yaml
algorand_kmd-1.0.0/: pubspec.yaml
android/: build.gradle
cardano_dart_sdk-3.2.1/: pubspec.yaml
cardano_dart_types-2.12.1/: pubspec.yaml
contract/: Cargo.toml
contract/soroban-ultrahonk-verifier/src/: lib.rs
contract/soroban-ultrahonk-verifier/src/utils/: ec.rs  relations.rs  shplemini.rs
contract/usdc_private/src/: lib.rs  poseidon2lib.rs  u512.rs
contracts/: Cargo.toml
contracts/soroban-ultrahonk-verifier/: Cargo.toml
contracts/soroban-ultrahonk-verifier/src/: utils.rs
contracts/soroban-ultrahonk-verifier/src/utils/: sumcheck.rs  transcript.rs  types.rs  utils.rs  verifier.rs
frontend/: .env.example  .gitignore  package.json  vite-d.env.ts  vite.config.js
js/: leather.stx.min.js
json/: registry.json  solana_token_registry.json
lib/: main.dart  ntcdcrypto.dart
linux/: CMakeLists.txt
multiversx_sdk/: pubspec.yaml
polkadart_scale_codec/: pubspec.yaml
scripts/: deploy_verifier.sh
solana_name_service/: pubspec.yaml
starknet-0.2.0/: pubspec.yaml
starknet_provider-0.2.0/: pubspec.yaml
stx_react_dapp/: package.json
substrate_metadata/: pubspec.yaml
test/: app_functions_test.dart
wallet_connect_dart_v2/: pubspec.yaml
x402-stacks/: pay.ts  (+5 more)
(+392 files in other folders)
